# ypipe

./: .gitignore  pyproject.toml  requirements.txt
ypipe/: README  __init__.py  consoleMixin.py  context.py  context_keys.py  data_master  env.py  fileTask.py  frameResourceTask.py  frameResourceTasks.py  iaFrameResourceTask.py  includePipelineTask.py  includeTaskgroupTask.py  log_utils.py  loopMixin.py  pipeline.py  readerTask.py  requirements.txt  resourceTask.py  storageResourceTask.py  storageResourceTasks.py  tableApp.py  task.py  taskConfig.py  taskFactory.py  tr2FrTask.py  transformMixin.py  utils.py
ypipe/tt/: __init__.py
