[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ypipe"
version = "0.1.0"
description = "Grundlegende Taskpipeline mit yaml task configuration"
authors = [
    { name="flow", email="groovehunter@posteo.de" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["."]
